@@ -4,6 +4,7 @@
     * Make the "remove side column" CSS work on more pages
     * Fix bug preventing GameFOX from working on message lists for some people
     * Re-add option to toggle the quote link
+    * Re-add Ricapar's Classic CSS
 
 2011-10-14:
     * version 0.8.1
